--- a/arch/arm/boot/dts/qcom/msm8994-mdss-pll.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8994-mdss-pll.dtsi
@@ -1,4 +1,4 @@
-/* Copyright (c) 2014, The Linux Foundation. All rights reserved.
+/* Copyright (c) 2014-2015, The Linux Foundation. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -27,7 +27,7 @@
 		gdsc-supply = <&gdsc_mdss>;
 		vddio-supply = <&pm8994_l12>;
 		vcca-supply = <&pm8994_l28>;
-
+		qcom,mdss-en-pll-90-phase;
 		clocks = <&clock_mmss clk_mdss_ahb_clk>;
 		clock-names = "iface_clk";
 		clock-rate = <0>;
