--- a/arch/arm/boot/dts/qcom/msm8994-mdss.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8994-mdss.dtsi
@@ -63,6 +63,7 @@
 		qcom,mdss-pipe-dma-xin-id = <2 10>;
 		qcom,mdss-pipe-cursor-xin-id = <7 7>;
 
+		qcom,mdss-en-svs-high;
 		qcom,mdss-has-panic-ctrl;
 		qcom,mdss-pipe-vig-panic-ctrl-offsets = <0 1 2 3>;
 		qcom,mdss-pipe-rgb-panic-ctrl-offsets = <4 5 6 7>;
