--- a/arch/arm/boot/dts/qcom/msm-pmi8994.dtsi
+++ b/arch/arm/boot/dts/qcom/msm-pmi8994.dtsi
@@ -690,8 +690,6 @@
 				qcom,max-current = <200>;
 				qcom,id = <0>;
 				qcom,current = <120>;
-				boost-supply = <&pmi8994_boostbypass>;
-				boost-voltage-max = <3600000>;
 			};
 
 			pmi8994_torch1: qcom,torch_1 {
@@ -702,8 +700,6 @@
 				qcom,max-current = <200>;
 				qcom,id = <1>;
 				qcom,current = <120>;
-				boost-supply = <&pmi8994_boostbypass>;
-				boost-voltage-max = <3600000>;
 			};
 
 			pmi8994_flashlight: qcom,flashlight {
@@ -717,6 +713,25 @@
 				boost-supply = <&pmi8994_boostbypass>;
 				boost-voltage-max = <3600000>;
 			};
+
+			pmi8994_switch: qcom,switch {
+				label = "switch";
+				qcom,led-name = "led:switch";
+				qcom,default-led-trigger =
+						"switch_trigger";
+				qcom,id = <2>;
+				qcom,current = <625>;
+				qcom,max-current = <1000>;
+				qcom,duration = <1280>;
+				reg0 {
+					regulator-name =
+						"pmi8994_boostbypass";
+					max-voltage = <3600000>;
+				};
+				reg1 {
+					regulator-name = "pon_spare_reg";
+				};
+            };
 		};
 	};
 };
